# ligo-deku-rpc

./: .gitignore  LICENSE  README.md  dune-project  flake.nix  ligo_deku_rpc.opam  start.sh  test.sh
.github/workflows/: build.yaml
nix/: default.nix  docker.nix
src/lib/: hash.ml  router.ml
src/test/: dune
