(lang dune 3.4)

(name ligo_deku_rpc)

(generate_opam_files true)

(source
 (github marigold-dev/ligo-deku-rpc))

(authors "Ulrik Strid")

(maintainers "Marigold Infra Team")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name ligo_deku_rpc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
